--- a/www/compiled/copenhagen.v0-3-0.css
+++ b/www/compiled/copenhagen.v0-3-0.css
@@ -477,6 +477,7 @@
     display: none;
     flex-direction: column;
     position: fixed;
+    z-index: 32768;
     bottom: 0px;
     left: 0px;
     width: 100%;
